--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free Modern React Templates & Components for building landing pages and UIs - Treact</title>
-    <link rel="stylesheet" href="Final__Project.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/932ffadf22.js" crossorigin="anonymous"></script>
-    <script src="Final__Project.js" defer></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <main>
